--- a/testapp/Makefile
+++ b/testapp/Makefile
@@ -3,7 +3,7 @@ CFLAGS += -fmessage-length=0 \
 CXXFLAGS = 
 OBJS := $(patsubst %.c,%.o,$(wildcard *.c))
 OBJS += $(patsubst %.cpp,%.o,$(wildcard *.cpp))
-LIBS = -lpthread -lstdc++ -lrt -L../libs -llogging -lbase -lmock
+LIBS = -lpthread -lstdc++ -L../libs -llogging -lbase -lmock -lrt
 
 TARGET = testapp
 
