--- a/testapp/Makefile
+++ b/testapp/Makefile
@@ -1,9 +1,8 @@
-CFLAGS += -fmessage-length=0 \
-          -I./ -I../common/include/  -I../common -I ../
+CFLAGS += -I./ -I../common/include/  -I../common -I ../
 CXXFLAGS = 
 OBJS := $(patsubst %.c,%.o,$(wildcard *.c))
 OBJS += $(patsubst %.cpp,%.o,$(wildcard *.cpp))
-LIBS = -lpthread -lstdc++ -L../libs -llogging -lbase -lmock -lrt
+LIBS = -lpthread -lstdc++ -L../libs -llogging -lbase -lclient -lbase -lrt -lstdc++
 
 TARGET = testapp
 
